[gd_scene format=3 uid="uid://cjuvs8ph0kmrt"]

[ext_resource type="StyleBox" uid="uid://nhx7jgro50t" path="res://themes/element_friend.tres" id="1_4gyqm"]
[ext_resource type="Script" uid="uid://opog2yl3clwo" path="res://code/enemy.gd" id="1_7k104"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(30, 30)

[node name="Enemy" type="Panel" unique_id=48449501]
offset_right = 30.0
offset_bottom = 30.0
theme_override_styles/panel = ExtResource("1_4gyqm")
script = ExtResource("1_7k104")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="." unique_id=1663359823]
rect = Rect2(0, 0, 30, 30)

[node name="Area2D" type="Area2D" parent="." unique_id=1196894048]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=907144788]
position = Vector2(15, 15)
shape = SubResource("RectangleShape2D_4gyqm")

[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
